--- a/src/main/resources/locale_en.properties
+++ b/src/main/resources/locale_en.properties
@@ -153,6 +153,7 @@ orders.common.order.id=Order Id
 orders.common.user.id=User Id
 orders.common.user.name=User name
 
+orders.common.order.placed.date=Placed date
 orders.common.order.start.date=Start date
 orders.common.order.end.date=End date
 orders.common.returned=Return Date
