--- a/src/main/resources/locale_ua.properties
+++ b/src/main/resources/locale_ua.properties
@@ -133,6 +133,8 @@ user.books.label.publication.date=Дата видавництва
 user.orders.orders.title=Мої замовлення
 user.orders.success.msg=Успішно замовлено!
 
+orders.common.order.placed.date=Дата замовлення
+
 orders.common.order.id=ID Замовлення
 orders.common.user.id=ID Користувача
 orders.common.user.name=Ім'я Користувача
